Fixes body overflow

--- a/private/css/header_footer.css
+++ b/private/css/header_footer.css
@@ -6,7 +6,7 @@ header{
     z-index: 10;
     width: 100%;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
   }
 .sub-header{
  padding: 4rem 0;
@@ -16,7 +16,7 @@ header{
     justify-content: space-around;
     align-items: center;
     min-height: 12vh;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     
 }
 
