--- a/private/css/styles.css
+++ b/private/css/styles.css
@@ -6,9 +6,11 @@
 
 body{
     margin: 0; 
-    padding: 0;   
-    overflow-x: hidden;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden;   
 }
+
 
 p, h1, h2, h3, h4, h5, h6{
     margin: 0;
